--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,500&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -351,7 +352,7 @@ template {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #fff;
   min-height: 100vh;
   display: -webkit-box;
@@ -367,5 +368,253 @@ body {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
+}
+
+.hero__whole-container {
+  padding: 50px 0;
+}
+
+.hero__img-holder {
+  padding: 0 8px;
+}
+
+.hero__big-img-holder {
+  width: 100%;
+  height: calc(100vh - 200px);
+  max-height: 500px;
+  position: relative;
+}
+
+.hero__big-img-holder img {
+  width: 100%;
+  height: 100%;
+  max-height: 80%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.hero__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.hero__item {
+  width: 100px;
+  height: 100px;
+  padding: 4px;
+  margin: 2px;
+  border-radius: 8px;
+  -webkit-transition: border 0.3s ease-out;
+  transition: border 0.3s ease-out;
+  border: 2px solid transparent;
+}
+
+.hero__item.active {
+  border: 2px solid #1d1d1d;
+}
+
+.hero__item img {
+  width: 100%;
+  height: 100%;
+}
+
+.hero__item:hover {
+  border: 2px solid #1d1d1d;
+}
+
+.hero__item:not(:first-child) {
+  margin-left: 2px;
+}
+
+.hero__btn {
+  border: none;
+}
+
+.hero__info {
+  padding: 0 8px;
+  height: 100vh;
+  overflow-y: scroll;
+}
+
+.hero__info::-webkit-scrollbar {
+  width: 0;
+}
+
+.hero__title {
+  font-size: 48px;
+  color: #1d1d1d;
+  font-weight: 600;
+  line-height: 1.2;
+  margin: 0 0 10px;
+}
+
+.hero__small-title {
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 700;
+  margin: 30px 0 10px;
+}
+
+.hero__choice-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.hero__choice-item {
+  padding: 8px;
+}
+
+.hero__choice-btn {
+  border: 1px solid #888;
+  width: 100%;
+  height: 100%;
+  padding: 16px 10px;
+  border-radius: 12px;
+  background-color: #fff;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 21px;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.hero__choice-btn.active {
+  border-color: #06c;
+  -webkit-box-shadow: 0 0 1px 1px #06c;
+          box-shadow: 0 0 1px 1px #06c;
+}
+
+.hero__choice-btn:hover {
+  border-color: #06c;
+  -webkit-box-shadow: 0 0 1px 1px #06c;
+          box-shadow: 0 0 1px 1px #06c;
+}
+
+.color-btn {
+  padding: 12px 10px;
+}
+
+.hero__color-circle {
+  height: 24px;
+  border-radius: 50%;
+  width: 24px;
+  display: inline-block;
+  -webkit-box-shadow: 1px 1px 5px #0000001a;
+          box-shadow: 1px 1px 5px #0000001a;
+  background: #d29d00;
+}
+
+.silver {
+  background-color: silver;
+}
+
+.grey {
+  background-color: grey;
+}
+
+.hero__color-text {
+  font-weight: 400;
+  font-size: 12px;
+  margin-top: 10px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.hero__calculator {
+  padding-left: 8px;
+  margin-top: 24px;
+  width: 100%;
+  max-width: 200px;
+}
+
+.hero__calculator-btn {
+  border: none;
+  background-color: transparent;
+  border: 1px solid #d6d6d6;
+  height: 40px;
+  font-weight: 600;
+}
+
+.minus {
+  font-size: 35px;
+  width: 30%;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.plus {
+  width: 30%;
+  font-size: 25px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.hero__calculator-output {
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  border: 1px solid #d6d6d6;
+  height: 40px;
+}
+
+.hero__price-holder {
+  font-size: 32px;
+  color: #1d1d1d;
+  font-weight: 600;
+  margin: 20px 0;
+  line-height: 1.5;
+}
+
+.hero__price {
+  display: block;
+}
+
+.hero__crossed-price {
+  font-size: 24px;
+  font-weight: 500;
+  text-decoration: line-through;
+}
+
+.hero__buy-btn-holder {
+  width: 100%;
+}
+
+.hero__buy-btn-holder button {
+  width: 100%;
+  height: 48px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  margin-bottom: 10px;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  line-height: 24px;
+  border-radius: 8px;
+}
+
+.add-cart {
+  color: #fff;
+  background-color: #06c;
+}
+
+.compare {
+  background-color: #f5f5f7;
+  color: #06c;
 }
 /*# sourceMappingURL=main.css.map */
