--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -13,3 +13,15 @@ body{
   display: flex;
   flex-flow: wrap column;
 }
+
+::-webkit-scrollbar{
+  width: 5px;
+}
+
+::-webkit-scrollbar-track{
+  background: #fff;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #06c;
+}
