--- a/css/main.css
+++ b/css/main.css
@@ -650,7 +650,11 @@ body {
   color: #337ab7;
 }
 
-.bx-link-external {
+.external-btn {
+  border: none;
+  background: transparent;
+  width: 40px;
+  height: 40px;
   font-size: 30px;
   color: #06c;
   cursor: pointer;
