--- a/css/main.css
+++ b/css/main.css
@@ -755,4 +755,228 @@ body {
   font-size: 35px;
   color: #fff;
 }
+
+.footer {
+  padding: 50px 0 20px;
+  border-top: 1px solid #d6d6d6;
+  background-color: #f5f5f7;
+}
+
+.footer__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__title {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 18px;
+  margin: 0;
+}
+
+.footer__inner-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__inner-item {
+  margin: 10px 0;
+}
+
+.footer__link {
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 18px;
+  color: #515154;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.footer__link:hover {
+  color: #1d1d1f;
+}
+
+.footer__link:hover .bx {
+  color: #1d1d1f;
+}
+
+.footer__link .bx {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  font-size: 26px;
+  color: #515154;
+}
+
+.social-item:not(:last-child) {
+  margin-right: 7px;
+}
+
+.footer__tel {
+  font-size: 14px;
+  line-height: 18px;
+  text-decoration: none;
+  color: #515154;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.footer__tel:hover {
+  color: #1d1d1f;
+}
+
+.footer__bottom {
+  margin-top: 30px;
+}
+
+.footer__text {
+  color: #515154;
+  font-size: 14px;
+  margin: 0;
+}
+
+.desc__btn-holder {
+  width: 100%;
+  padding: 5px;
+  border-radius: 8px;
+  background-color: #f5f5f7;
+  position: relative;
+}
+
+.desc__btn-holder button {
+  width: 50%;
+  padding: 12px 0;
+  border: none;
+  background-color: transparent;
+  position: relative;
+  z-index: 10;
+}
+
+.desc__color {
+  width: 49.5%;
+  height: 80%;
+  display: inline-block;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 8px;
+  margin: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.desc__summary-info {
+  margin-top: 40px;
+  display: none;
+}
+
+.desc__summary-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.desc__specifications {
+  margin-top: 40px;
+  display: none;
+}
+
+.show-it {
+  display: block;
+}
+
+#similar {
+  margin-bottom: 38px;
+}
+
+.similar__title {
+  font-size: 28px;
+  line-height: 1.5;
+  text-align: center;
+  font-weight: 700;
+  padding: 10px 0;
+  margin-bottom: 10px;
+}
+
+.similar__list-holder {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.similar__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.similar__name {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.similar__btn {
+  border: none;
+  background-color: transparent;
+  width: 100%;
+}
+
+.similar__btn:hover .similar__name {
+  color: #06c;
+}
+
+.similar__img-container {
+  width: 100%;
+}
+
+.similar__img-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.arrow-btn {
+  color: #8a8a8a;
+  background: #ececec;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  z-index: 99;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: none;
+  position: absolute;
+  top: 55%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.arrow-btn .bx {
+  font-size: 35px;
+}
+
+.arrow-btn:hover {
+  color: #616161;
+}
+
+.left {
+  left: 30px;
+  display: none;
+}
+
+.right {
+  right: 30px;
+}
 /*# sourceMappingURL=main.css.map */
