--- a/css/main.css
+++ b/css/main.css
@@ -382,6 +382,12 @@ body {
   margin: 0 auto;
 }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 100%;
+  }
+}
+
 .hero__whole-container {
   padding: 50px 0;
 }
@@ -401,8 +407,8 @@ body {
 }
 
 .hero__img-keeper img {
-  width: 550px;
-  height: 400px;
+  width: 507px;
+  height: 430px;
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -756,6 +762,23 @@ body {
   color: #fff;
 }
 
+@media screen and (max-width: 1200px) {
+  .hero__img-keeper img {
+    width: 467px;
+    height: 390px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .hero__item {
+    width: 88px;
+    height: 88px;
+  }
+  .hero__item img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .footer {
   padding: 50px 0 20px;
   border-top: 1px solid #d6d6d6;
@@ -925,6 +948,7 @@ body {
   border: none;
   background-color: transparent;
   width: 100%;
+  overflow: hidden;
 }
 
 .similar__btn:hover .similar__name {
@@ -933,11 +957,14 @@ body {
 
 .similar__img-container {
   width: 100%;
+  height: 250px;
 }
 
 .similar__img-container img {
   width: 100%;
   height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .arrow-btn {
