--- a/scss/blocks/_desc.scss
+++ b/scss/blocks/_desc.scss
@@ -80,6 +80,7 @@
   border: none;
   background-color: transparent;
   width: 100%;
+  overflow: hidden;
 
   &:hover{
     .similar__name{
@@ -90,10 +91,12 @@
 
 .similar__img-container{
   width: 100%;
+  height: 250px;
 
   img{
     width: 100%;
     height: 100%;
+    object-fit: contain;
   }
 }
 
