--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -16,10 +16,9 @@
 }
 
 .hero__img-keeper{ 
-
   img{
-    width: 550px;
-    height: 400px;
+    width: 507px;
+    height: 430px;
     object-fit: contain;
   }
 }
@@ -346,4 +345,24 @@
   transition: all 0.3s ease;
   font-size: 35px;
   color: #fff;
+}
+
+@media screen and (max-width: 1200px) {
+  .hero__img-keeper{ 
+    img{
+      width: 467px;
+      height: 390px;
+      object-fit: contain;
+    }
+  }
+
+  .hero__item{
+    width: 88px;
+    height: 88px;
+
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
