--- a/css/main.css
+++ b/css/main.css
@@ -407,7 +407,7 @@ body {
 }
 
 .hero__img-keeper img {
-  width: 507px;
+  width: 550px;
   height: 430px;
   -o-object-fit: contain;
      object-fit: contain;
@@ -776,6 +776,107 @@ body {
   .hero__item img {
     width: 100%;
     height: 100%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .hero__whole-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hero__img-keeper img {
+    width: 675px;
+    height: 500px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .hero__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .hero__item {
+    width: 88px;
+    height: 88px;
+  }
+  .hero__item img {
+    width: 100%;
+    height: 100%;
+  }
+  .hero__img-holder {
+    margin-bottom: 50px;
+  }
+  .ram-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .memory-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer__item:first-child {
+    margin-bottom: 16px;
+  }
+  .footer__item:nth-child(2) {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    max-width: 100vw;
+    margin: 0;
+  }
+  .hero__img-keeper img {
+    width: 100vw;
+    height: 450px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .full-screen {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .hero__img-keeper img {
+    width: 90vw;
+    height: 250px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .hero__item {
+    width: 70px;
+    height: 60px;
+  }
+  .hero__title {
+    font-size: 32px;
+  }
+  .desc__btn-holder button {
+    font-size: 12px;
+  }
+  .footer__bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__text:first-child {
+    margin-bottom: 10px;
+    margin-right: auto;
+  }
+  .footer__text:last-child {
+    text-align: left !important;
+    margin-right: auto;
   }
 }
 
