--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -72,3 +72,13 @@
   font-size: 14px;
   margin: 0;
 }
+
+.footer__udevs{
+  text-decoration: none;
+  color: #06c;
+  transition: all 0.3s ease;
+
+  &:hover{
+    color: #1d1d1f;
+  }
+}
