--- a/css/main.css
+++ b/css/main.css
@@ -971,6 +971,35 @@ body {
   color: #1d1d1f;
 }
 
+.help {
+  position: fixed;
+  z-index: 999;
+  bottom: 20px;
+  right: 20px;
+}
+
+.help__btn {
+  height: 100%;
+  width: 100%;
+  border-radius: 50px;
+  border: 2px solid #c5c5c5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  color: #fff;
+  height: 50px;
+  width: 140px;
+  background: #1d1d1d;
+  font-weight: 600;
+}
+
 .desc__btn-holder {
   width: 100%;
   padding: 5px;
