--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -82,3 +82,26 @@
     color: #1d1d1f;
   }
 }
+
+.help{
+  position: fixed;
+  z-index: 999;
+  bottom: 20px;
+  right: 20px;
+}
+
+.help__btn{
+  height: 100%;
+  width: 100%;
+  border-radius: 50px;
+  border: 2px solid #c5c5c5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  height: 50px;
+  width: 140px;
+  background: #1d1d1d;
+  font-weight: 600;
+}
